[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-proxy-ops-vault"
version = "0.1.0"
description = "Приватный Telegram-бот для управления VPS, оплатами и мануалами"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.13,<4.0",
  "SQLAlchemy>=2.0,<3.0",
  "asyncpg>=0.30,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "cryptography>=43.0,<45.0",
  "apscheduler>=3.10,<4.0",
  "python-dateutil>=2.9,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0"
]

[tool.setuptools]
packages = [
  "bot",
  "bot.handlers",
  "bot.keyboards",
  "bot.middlewares",
  "bot.states",
  "db",
  "services",
  "crypto",
  "migrations"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
